cluster/apps/default/bifrost/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bifrost
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bifrost
